added work stealing